# bazel-exp

./: .bazelrc  .gitignore  BUILD.bazel  LICENSE  README.md  WORKSPACE  angular-metadata.tsconfig.json  angular.json  package-lock.json  package.json  postinstall.tsconfig.json  tsconfig.json
e2e/: BUILD  BUILD.bazel  protractor.on-prepare.js
e2e/src/: app.e2e-spec.ts  app.po.ts
src/: BUILD  BUILD.bazel  app.component.html  app.module.dev.ts  app.module.ts  index.html  main.dev.ts  main.ts  module-id.js  require.config.js  rxjs_shims.js  tsconfig.json  tsconfig.spec.json
src/app/: BUILD  BUILD.bazel  app-routing.module.ts  app.component.html  app.component.spec.ts  app.component.ts  app.module.dev.ts  app.module.ts
src/app/hello-world/: BUILD  hello-world.component.ts  hello-world.module.ts
src/app/shared/lib/: BUILD.bazel  lib.ts
src/app/shared/material/: BUILD  BUILD.bazel  material.module.ts
src/app/todos/: todos.component.ts  todos.module.ts
src/app/views/hello-world/: BUILD  BUILD.bazel  hello-world.component.html  hello-world.component.ts  hello-world.module.ts
src/app/views/todos/: BUILD  todos.component.scss  todos.component.ts  todos.module.ts
src/assets/: BUILD
src/assets/styles/: main.scss  shared.scss
src/configs/: BUILD  BUILD.bazel  require.config.js  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
src/features/hello-world/: BUILD.bazel  hello-world.component.html  hello-world.component.scss  hello-world.component.spec.ts  hello-world.component.ts  hello-world.module.ts
src/features/todos/: BUILD.bazel  todos.component.html  todos.component.ts  todos.module.ts
src/hello-world/: hello-world.component.spec.ts  hello-world.component.ts  hello-world.module.ts
src/main/: BUILD  main.dev.ts  main.ts
src/reducers/: reducers.ts
src/styles/: main.scss  shared.scss
src/todos/: BUILD  todos.component.html  todos.component.ts  todos.module.ts
