load("@angular//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")

package(default_visibility = ["//visibility:public"])

sass_binary(
    name = "app-styles",
    src = "app.component.scss",
    deps = [],
)

ng_module(
    name = "app",
    srcs = [
        "app.component.ts",
        "app.module.dev.ts",
        "app.module.ts",
        "app-routing.module.ts",
    ],
    assets = [
        ":app-styles",
        "app.component.html",
    ],
    tsconfig = "//src:tsconfig-app",
    deps = [
        "//src/app/shared/material",
        "//src/features/hello-world",
        "//src/features/todos",
        "@angular//packages/core",
        "@angular//packages/platform-browser",
        "@angular//packages/platform-browser/animations",
        "@angular//packages/router",
        "@npm//@ngrx/store",
    ],
)
