load("@npm_angular_bazel//:index.bzl", "ng_module")

package(default_visibility = ["//visibility:public"])

NG_FACTORY_ADDED_IMPORTS = [
    "@npm//@angular/material",
    "@npm//@angular/forms",
]

ng_module(
    name = "app",
    srcs = [
        "app.component.ts",
        "app.module.ts",
        "app-routing.module.ts",
    ],
    assets = ["app.component.html"],
    tsconfig = "//src/configs:tsconfig.app.json",
    deps = NG_FACTORY_ADDED_IMPORTS + [
        "//src/features/hello-world",
        "//src/app/shared/material",
        "//src/features/todos",
        "@npm//@angular/core",
        "@npm//@angular/platform-browser",
        "@npm//@angular/router",
        "@npm//@ngrx/store",
    ],
)
