load("@npm_angular_bazel//:index.bzl", "ng_module")
load("@io_bazel_rules_sass//:defs.bzl", "sass_binary")

package(default_visibility = ["//visibility:public"])

# We don't import from these, but the generated ngfactory code will
NG_FACTORY_ADDED_IMPORTS = [
    "@npm//@angular/material",
]

sass_binary(
    name = "todos-styles",
    src = "todos.component.scss",
    deps = ["//src/assets/styles:shared"],
)

ng_module(
    name = "todos",
    srcs = [
        "todos.component.ts",
        "todos.module.ts",
    ],
    assets = [
        "todos.component.html",
        ":todos-styles",
    ],
    tsconfig = "//src/configs:tsconfig.app.json",
    deps = NG_FACTORY_ADDED_IMPORTS + [
        "//src/app/shared/lib",
        "//src/app/shared/material",
        "//src/app/shared/reducers",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/forms",
        "@npm//@angular/router",
        "@npm//@ngrx/store",
        "@npm//rxjs",
    ],
)
